   command ``dulwich unpack-objects``. (Jelmer Vernooĳ)

 * Add ``merge-tree`` plumbing command to ``dulwich.porcelain`` and CLI.
   This command performs three-way tree merges without touching the working
   directory or creating commits, similar to ``git merge-tree``. It outputs
   the merged tree SHA and lists any conflicted paths. (Jelmer Vernooĳ)

 * Add support for pack index format version 3. This format supports variable
   hash sizes to enable future SHA-256 support. The implementation includes
   reading and writing v3 indexes with proper hash algorithm identification
   (1 for SHA-1, 2 for SHA-256). Note that SHA-256 support itself is not yet
   implemented and will raise NotImplementedError. (Jelmer Vernooĳ)

 * Fix ``LocalGitClient`` assertion error when fetching externally cloned repositories
   into ``MemoryRepo``. Previously, the client would fail with an AssertionError
   when trying to process pack data from repositories that were cloned externally.
   (Jelmer Vernooĳ, #1179)

 * Add support for ``os.PathLike`` objects throughout the API. Functions that
   accept file paths now support ``pathlib.Path`` objects in addition to
   strings and bytes. This includes repository operations, configuration file
   handling, ignore file processing, and all major entry points.
   (Jelmer Vernooĳ, #1074)

 * Add support for ``format`` argument to ``Repo.init()`` and ``Repo.init_bare()``
   to specify repository format version (0 or 1). This allows creating repositories
   with different format versions by setting the ``core.repositoryformatversion``
   configuration value. (Jelmer Vernooĳ)

 * Fix Rust implementation of ``sorted_tree_items()`` to correctly handle submodules.
   Previously, submodules (mode 0o160000) were incorrectly treated as directories
   in the sorting order, causing different results compared to the Python
   implementation. (Jelmer Vernooĳ, #1325)

 * Fix ``porcelain.add()`` to stage both untracked and modified files when no